# loca-loca-fw

./: .devcontainer.json  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.docker/: Dockerfile  build.sh
main/: CMakeLists.txt  as5600.c  as5600.h  bluetooth.c  bluetooth.h  config.h  http.c  http.h  idf_component.yml  lock_state.c  lock_state.h  main.c  stepper.c  stepper.h  tmc2209.c  tmc2209.h  wifi.c  wifi.h
